--- a/web/assets/css/offliner.css
+++ b/web/assets/css/offliner.css
@@ -1,5 +1,8 @@
 @import "bootstrap-responsive.min.css";
 @import "../fonts/fonts.css";
+/*
+Usability TODO:
+*/
 body{
     font-family: 'Ubuntu', sans-serif;
     padding-top: 80px;
@@ -15,11 +18,11 @@ a span.icon:hover{
 }
 .logout-panel span{
     position: relative;
-    top: 30px;
+    top: 28px;
     font-size: 125%;
 }
 .logout-panel {
-    min-height: 77px;
+    min-height: 75px;
 }
 .logout-panel a{
     float: right;
@@ -204,7 +207,7 @@ input[type='url']{
 .navbar .brand {
     display: block;
     float: left;
-    font-size: 2.1429em;
+    font-size: 2.5em;
     font-weight: bold;
     padding: 25px 20px 0;
     margin: 0;
@@ -215,7 +218,7 @@ input[type='url']{
     padding: 0;
     text-shadow: none;
     color: #fff;
-    font-size: 2.1429em;
+    font-size: 1.5em;
     font-weight: bold;
 }
 .navbar .nav>li>a:hover{
